# QuorumProof

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md
.github/workflows/: canary-deploy.yml  ci.yml  dr-drill.yml
api-server/: package-lock.json  package.json
api-server/src/: index.ts  notifications.ts  searchIndex.ts
api-server/src/middleware/: cacheControl.ts  rbac.ts  (+1 more)
api-server/tests/: analytics.test.ts  audit.test.ts  cacheControl.test.ts  crl.test.ts  e2e-multi-step-flows.test.ts  expiry-analytics.test.ts  gdpr.test.ts  graphql.test.ts  notifications.test.ts  rbac.test.ts  reports.test.ts  search-advanced-filters.test.ts  search-deduplication.test.ts  search.test.ts  shardedStorage.test.ts  slices.test.ts  verification.test.ts
contracts/: dependencies.toml
contracts/quorum_proof/: API.md
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
dashboard/src/: App.css  App.tsx
docs/: api-endpoint-examples.md  contract-upgrade-guide.md  government-licensing-integration.md  zk-proof-scheme-specification.md
docs/adr/: adr-004-soroban-platform.md
docs/video-scripts/: 01-issuer-onboarding.md  02-slice-creation.md  03-claim-verification.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  envConfig.ts  main.tsx  stellar.ts  styles.css
monitoring/: docker-compose.yml
monitoring/exporter/: exporter.py  metrics.py  performance_regression.py
monitoring/loki/: loki.yml  promtail.yml
monitoring/prometheus/: alerts.yml
scripts/: canary_deploy.sh  check_deps.sh  pre_upgrade_checks.sh
(+69 files in other folders)
