[workspace]
members = [
    "contracts/sbt_registry",
    "contracts/zk_verifier",
    "contracts/quorum_proof",
    "contracts/integration_tests",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.7" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
